package ua.khpi.oop.lab07;

public interface Bookable {
    void book();
}