package ua.khpi.oop.lab07;

public interface Cleanable {
    void clean();
}