package ua.khpi.oop.lab07;

public interface Reservable {
    void reserve();
}